# Gaussian-Filter-GPU-OpenGL

./: CMakeLists.txt  README.md
src/: GLSLProgram.cpp  GLSLProgram.h  GaussianBlur.h  GaussianFilter.cpp  GaussianFilter.h  Shader.cpp  Shader.h
src/shader/: GaussianFS.glsl  GaussianVS.glsl
test/: GaussianFilterTest.cpp  Timer.h
